[gd_scene load_steps=4 format=3 uid="uid://cngirnrsmq5o2"]

[ext_resource type="PackedScene" uid="uid://ctb8oa2wm3r0u" path="res://assets/scenes/objects/entities/base_entity.tscn" id="1_l2wuk"]
[ext_resource type="Script" path="res://assets/code/Enemies/beastEntity.gd" id="2_cx5hc"]
[ext_resource type="Texture2D" uid="uid://8ior7uko5da2" path="res://assets/sprites/placeholders/PLACEHOLDER_BEAST.png" id="3_ava3w"]

[node name="BeastEnemy" instance=ExtResource("1_l2wuk")]
script = ExtResource("2_cx5hc")

[node name="Sprite3D" parent="." index="0"]
transform = Transform3D(0.63, 0, 0, 0, 0.63, 0, 0, 0, 0.63, -0.0377417, 0.458719, 0)
texture = ExtResource("3_ava3w")

[node name="DetectionBubble" parent="." index="3"]
visible = false

[node name="CollisionShape3D" parent="AttackBubble" index="1"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.008, 0)

[node name="RetreatTimer" type="Timer" parent="." index="6"]
