[gd_scene load_steps=32 format=3 uid="uid://cxkbfwawip2s1"]

[ext_resource type="Script" path="res://assets/code/Enemies/beastEntity.gd" id="1_24wko"]
[ext_resource type="Texture2D" uid="uid://bqgy2ggqsheot" path="res://assets/sprites/enemies/BeastSheet.png" id="2_5wyxy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_miu2h"]

[sub_resource type="SphereShape3D" id="SphereShape3D_igskt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4xde8"]
size = Vector3(1, 1, 1.66199)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6yqvb"]
animation = &"AttackFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gf7mb"]
animation = &"AttackBack"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_c62uf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6yqvb")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_gf7mb")
blend_point_1/pos = -0.02
snap = 0.02

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ohjgr"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6dkyo"]
animation = &"IdleFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_463dj"]
animation = &"IdleBack"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_c53o6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6dkyo")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_463dj")
blend_point_1/pos = -0.02
snap = 0.02

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ft6mh"]
animation = &"RunFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7bryk"]
animation = &"RunBack"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_vkiw4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ft6mh")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_7bryk")
blend_point_1/pos = -0.02
snap = 0.02

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hbnw4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v5mp5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cwvi0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c03xr"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fru3t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_21tta"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_467ee"]
states/Attack/node = SubResource("AnimationNodeBlendSpace1D_c62uf")
states/Attack/position = Vector2(545, 147)
states/Hit/node = SubResource("AnimationNodeAnimation_ohjgr")
states/Hit/position = Vector2(545, 86)
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_c53o6")
states/Idle/position = Vector2(354, 86)
states/Run/node = SubResource("AnimationNodeBlendSpace1D_vkiw4")
states/Run/position = Vector2(354, 147)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_hbnw4"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_v5mp5"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_cwvi0"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_c03xr"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_fru3t"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_21tta")]

[sub_resource type="Animation" id="Animation_dokw5"]
resource_name = "IdleFront"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 1, 1, 1, 1, 1]
}

[sub_resource type="Animation" id="Animation_bdurj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2svs0"]
resource_name = "IdleBack"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 12, 12, 12, 13, 13, 13, 13, 13]
}

[sub_resource type="Animation" id="Animation_qy0v4"]
resource_name = "RunFront"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_43xga"]
resource_name = "RunBack"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_okcc7"]
resource_name = "AttackFront"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.3, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_142no"]
resource_name = "AttackBack"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.3, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_2d3b5"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oxcue"]
_data = {
"AttackBack": SubResource("Animation_142no"),
"AttackFront": SubResource("Animation_okcc7"),
"Hit": SubResource("Animation_2d3b5"),
"IdleBack": SubResource("Animation_2svs0"),
"IdleFront": SubResource("Animation_dokw5"),
"RESET": SubResource("Animation_bdurj"),
"RunBack": SubResource("Animation_43xga"),
"RunFront": SubResource("Animation_qy0v4")
}

[node name="LilBeast" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0147161, 0)
script = ExtResource("1_24wko")
max_health = 10

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.63, 0, 0, 0, 0.63, 0, 0, 0, 0.63, -0.0377417, 0.478408, 0)
billboard = 1
texture = ExtResource("2_5wyxy")
hframes = 12
vframes = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03989, 0)
shape = SubResource("CylinderShape3D_miu2h")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1
avoidance_enabled = true

[node name="DetectionBubble" type="Area3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.050616, 0)
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionBubble"]
transform = Transform3D(2.06, 0, 0, 0, 2.06, 0, 0, 0, 2.06, 0, -0.008, 0)
shape = SubResource("SphereShape3D_igskt")

[node name="AttackBubble" type="Area3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.0645003, 0)
collision_layer = 2
collision_mask = 2

[node name="Hitbox" type="Area3D" parent="AttackBubble"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.0930994, 0.195614)
collision_layer = 4
monitoring = false

[node name="CollisionShape3d" type="CollisionShape3D" parent="AttackBubble/Hitbox"]
transform = Transform3D(0.724, 0, 0, 0, 0.415, 0, 0, 0, 0.147, 0, -0.165119, -0.493353)
shape = SubResource("BoxShape3D_4xde8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackBubble"]
transform = Transform3D(0.26, 0, 0, 0, 0.26, 0, 0, 0, 0.26, 0, -0.008, 0)
shape = SubResource("SphereShape3D_igskt")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_467ee")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = 0.238411
parameters/Idle/blend_position = 0
parameters/Run/blend_position = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oxcue")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="DetectionBubble" to="." method="_on_detection_bubble_body_entered"]
[connection signal="body_exited" from="DetectionBubble" to="." method="_on_detection_bubble_body_exited"]
[connection signal="body_entered" from="AttackBubble" to="." method="_on_attack_bubble_body_entered"]
[connection signal="body_entered" from="AttackBubble" to="." method="_on_detection_bubble_body_entered"]
[connection signal="body_exited" from="AttackBubble" to="." method="_on_detection_bubble_body_exited"]
[connection signal="body_exited" from="AttackBubble" to="." method="_on_attack_bubble_body_exited"]
[connection signal="body_entered" from="AttackBubble/Hitbox" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="AttackBubble/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="AttackBubble/Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
